# aviutl2-rs

./: .gitattributes  .gitignore  .gitmodules  AviReader8.cpp  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  Rakefile  about.hbs  about.package.hbs  aviutl2.toml  dvd_for_10_minutes.aup2  hk.pkl  lefthook.yml  mise.toml  wrangler.toml
crates/aviutl2/: Cargo.toml  README.md
crates/aviutl2-alias/: Cargo.toml  README.md
crates/aviutl2-alias/src/: lib.rs  table.rs  track.rs  value.rs
crates/aviutl2-alias/src/snapshots/: aviutl2_alias__table__tests__parse_table.snap  aviutl2_alias__table__tests__parse_table.snap.new
crates/aviutl2-alias/test_assets/: binary.aup2  everything.aup2  tracks.aup2
crates/aviutl2-dummy/: Cargo.toml
crates/aviutl2-dummy/src/: filter.rs  lib.rs
crates/aviutl2-dummy/tests/: filter_test.rs  filter_video_test.rs
crates/aviutl2-eframe/: Cargo.toml  README.md
crates/aviutl2-eframe/src/: key.rs  lib.rs
crates/aviutl2-macros/: Cargo.toml  README.md
crates/aviutl2-macros/src/: filter_config_items.rs  filter_config_select_items.rs  from_script_module_param.rs  generic_menus.rs  internal_module.rs  into_script_module_return_value.rs  lib.rs  macro_if.rs  module_functions.rs  module_metatable.rs  plugin.rs  script_module_bridge.rs  script_module_callback.rs  to_script_module_return_value.rs  utils.rs
crates/aviutl2-macros/src/snapshots/: aviutl2_macros__filter_config_items__tests__all.snap.new  aviutl2_macros__filter_config_items__tests__button.snap  aviutl2_macros__filter_config_items__tests__check.snap  aviutl2_macros__filter_config_items__tests__checksection.snap  aviutl2_macros__filter_config_items__tests__color.snap  aviutl2_macros__filter_config_items__tests__file.snap  aviutl2_macros__filter_config_items__tests__group.snap  aviutl2_macros__filter_config_items__tests__group.snap.new  (+40 more)
crates/aviutl2-sys/: Cargo.toml  README.md
crates/aviutl2-sys/src/: cache2.rs  common.rs  config2.rs  filter2.rs  input2.rs  lib.rs  logger2.rs  module2.rs  output2.rs  plugin2.rs
crates/aviutl2/src/: cache.rs  common.rs  config.rs  internal_base.rs  internal_macros.rs  lib.rs  logger.rs  utils.rs
crates/aviutl2/tests/: script_module_callback.rs
examples/binaural-filter/: Cargo.toml  README.md  build.rs  translation.aul2
examples/binaural-filter/i18n/: English.rusty_binaural_filter.aul2
examples/binaural-filter/src/: lib.rs
examples/chiptune-filter/: Cargo.toml  README.md  translation.aul2
examples/chiptune-filter/i18n/: English.rusty_chiptune_filter.aul2
examples/chiptune-filter/src/: lib.rs
examples/equalizer-filter/: Cargo.toml  README.md  translation.aul2
examples/equalizer-filter/i18n/: English.rusty_equalizer_filter.aul2
examples/equalizer-filter/src/: eq.rs  lib.rs
examples/ffmpeg-output/: Cargo.toml  README.md  build.rs  translation.aul2
examples/ffmpeg-output/i18n/: English.rusty_ffmpeg_output.aul2
examples/ffmpeg-output/src/: config.rs  dialog.rs  lib.rs  main.rs  named_pipe.rs  presets.rs
examples/image-rs-input/: Cargo.toml  README.md  translation.aul2
examples/image-rs-input/src/: alpha.rs  codecs.rs  jpeg_xl.rs  lib.rs
examples/image-rs-output/: Cargo.toml  README.md  translation.aul2
examples/image-rs-output/i18n/: English.rusty_image_rs_output.aul2
examples/image-rs-output/src/: lib.rs
examples/local-alias-plugin/: Cargo.toml  README.md  translation.aul2
examples/local-alias-plugin/i18n/: English.rusty_local_alias_plugin.aul2
examples/local-alias-plugin/page/: biome.json  index.html  package.json  vite.config.ts
examples/local-alias-plugin/src/: entry.rs  gui.rs  lib.rs  ui.rs  window_client.rs  ws_popup.rs
examples/metronome-plugin/: Cargo.toml  README.md  translation.aul2
examples/metronome-plugin/i18n/: English.rusty_metronome_plugin.aul2
examples/metronome-plugin/src/: filter.rs  gui.rs  lib.rs  metronome.rs  wav.rs
examples/midi-player-input/: Cargo.toml  README.md  piano.sf2
examples/midi-player-input/i18n/: English.rusty_midi_player_input.aul2
examples/midi-player-input/src/: lib.rs  synthesizer.rs  track.rs
examples/midi-player-input/test_data/: unidentified_signpo5ts.mid
examples/pixel-format-test-input/: Cargo.toml  README.md
examples/pixel-format-test-input/i18n/: English.rusty_pixel_format_test_input.aul2
examples/pixel-format-test-input/src/: lib.rs
examples/pixelsort-filter/: Cargo.toml  README.md  translation.aul2
examples/pixelsort-filter/benches/: bench.rs
examples/pixelsort-filter/i18n/: English.rusty_pixelsort_filter.aul2
examples/pixelsort-filter/src/: lib.rs  rotate.rs  sort.rs  transpose.rs
examples/random-color-filter/: Cargo.toml  README.md  translation.aul2
examples/random-color-filter/i18n/: English.rusty_random_color_filter.aul2
examples/random-color-filter/src/: lib.rs
examples/regex-module/: Cargo.toml  README.md  translation.aul2
examples/regex-module/i18n/: English.rusty_regex_module.aul2
examples/regex-module/src/: lib.rs
examples/restart-shortcut-plugin/: Cargo.toml  README.md  translation.aul2
examples/restart-shortcut-plugin/i18n/: English.rusty_restart_shortcut_plugin.aul2
examples/restart-shortcut-plugin/src/: lib.rs
examples/scripts-search-plugin/: Cargo.toml  README.md  translation.aul2
examples/scripts-search-plugin/i18n/: English.rusty_scripts_search_plugin.aul2
examples/scripts-search-plugin/src/: gui.rs  lib.rs
examples/srt-file-plugin/: Cargo.toml  README.md  translation.aul2
examples/srt-file-plugin/i18n/: English.rusty_srt_file_plugin.aul2
examples/srt-file-plugin/src/: lib.rs
examples/statistics-output/: Cargo.toml  README.md
examples/statistics-output/i18n/: English.rusty_statistics_output.aul2
examples/statistics-output/page/: index.html  package.json
examples/statistics-output/src/: lib.rs
examples/txt-import-plugin/: Cargo.toml
examples/txt-import-plugin/src/: lib.rs
examples/username-module/: Cargo.toml  README.md
examples/username-module/src/: lib.rs
examples/wgpu-filter/: Cargo.toml  README.md
examples/wgpu-filter/src/: lib.rs  shader.wgsl
(+120 files in other folders)
