[workspace]
members = ["./crates/*", "./examples/*"]
resolver = "3"

[workspace.package]
version = "0.8.1"
edition = "2024"
license = "MIT"
authors = ["Nanashi. <sevenc7c.com>"]
description = "AviUtl2 SDK for Rust"
repository = "https://github.com/sevenc-nanashi/aviutl2-rs"
publish = false

[workspace.dependencies]
aviutl2 = { path = "./crates/aviutl2", version = "0.8.1" }
aviutl2-sys = { path = "./crates/aviutl2-sys", version = "0.8.1" }
aviutl2-macros = { path = "./crates/aviutl2-macros", version = "0.8.1" }

[patch.crates-io]
# examples/binaural-filter
audionimbus = { git = "https://github.com/sevenc-nanashi/audionimbus", branch = "all/20251010" }
audionimbus-sys = { git = "https://github.com/sevenc-nanashi/audionimbus", branch = "all/20251010" }
