[package]
name = "aviutl2-alias"
description = "AviUtl2のエイリアスデータを操作するためのライブラリ"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true
categories = ["data-structures"]

[features]
default = []

[dependencies]
duplicate = "2.0.1"
indexmap = "2.13.0"
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.46.3"
rstest = "0.26.1"
