[package]
name = "aviutl2-dummy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[lib]

[dependencies]
aviutl2.workspace = true
aviutl2-sys.workspace = true
zerocopy = "0.8.27"

[dev-dependencies]
aviutl2.workspace = true
