[package]
name = "aviutl2-eframe"
description = "AviUtl2とegui/eframeをつなぐユーティリティ"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true
categories = ["gui"]

[dependencies]
anyhow = "1.0.101"
aviutl2.workspace = true
eframe = { version = "0.33.3", default-features = false, features = ["glow", "persistence"] }
winit = "0.30.12"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }

