[package]
name = "aviutl2-macros"
description = "aviutl2-rsで使うproc-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
decimal-rs = "0.1.43"
either = "1.15.0"
itertools = "0.14.0"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.100"
# https://github.com/rust-lang/cargo/issues/4242 のワークアラウンド。
# aviutl2.workspace = true
aviutl2 = { path = "../aviutl2" }
insta = "1.43.2"
rustfmt-wrapper = "0.2.1"
