[package]
name = "aviutl2-sys"
description = "AviUtl2 SDKのヘッダーのRust移植"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true
categories = ["external-ffi-bindings"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Media_Multimedia",
] }
