[package]
name = "aviutl2"
description = "AviUtl2 SDKのRustラッパー"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true
categories = ["api-bindings"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
all-features = true

[features]
default = ["input", "output", "filter", "module", "generic", "aviutl2-alias"]
input = []
output = []
filter = []
module = []
generic = []
image = ["dep:image"]
serde = ["dep:serde", "dep:rmp-serde", "dep:zstd"]
aviutl2-alias = ["dep:aviutl2-alias"]

[dependencies]
anyhow = "1.0.98"
aviutl2-macros.workspace = true
aviutl2-sys.workspace = true
aviutl2-alias = { workspace = true, optional = true }
duplicate = "2.0.0"
env_filter = "0.1.4"
half = { version = "2.6.0", features = ["zerocopy"] }
image = { version = "0.25.6", optional = true }
impl-trait-for-tuples = "0.2.3"
log = "0.4.27"
native-dialog = "0.9.0"
num-rational = "0.4.2"
pastey = "0.1.1"
raw-window-handle = "0.6.2"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.12"
windows = { version = "0.61.3", features = ["Win32_System_Diagnostics_Debug"] }
zerocopy = { version = "0.8.26", features = ["std"] }
zstd = { version = "0.13.3", optional = true }
