[package]
name = "aviutl2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AviUtl2 SDKのRustラッパー"
repository.workspace = true
license.workspace = true
categories = ["api-bindings"]
publish = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
all-features = true

[dependencies]
anyhow = "1.0.101"
aviutl2-alias = { workspace = true, optional = true }
aviutl2-macros.workspace = true
aviutl2-sys.workspace = true
comptime-if = "0.1.1"
dashmap = "6.1.0"
duplicate = "2.0.1"
env_filter = "0.1.4"
half = { version = "2.7.1", features = ["zerocopy"] }
image = { version = "0.25.9", optional = true }
num-rational = "0.4.2"
parking_lot = "0.12.5"
pastey = "0.2.1"
process_path = { version = "0.1.4", optional = true }
raw-window-handle = "0.6.2"
rmp-serde = { version = "1.3.1", optional = true }
ruzstd = { version = "0.8.2", optional = true }
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log"] }
windows = { version = "0.62.2", features = ["Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging"] }
zerocopy = { version = "0.8.39", features = ["std"] }

[features]
default = [
  "aviutl2-alias",
  "filter",
  "generic",
  "input",
  "module",
  "output",
  "wrap_log"
]
aviutl2-alias = ["dep:aviutl2-alias"]
filter = []
generic = []
image = ["dep:image"]
input = []
module = []
output = []
serde = ["dep:rmp-serde", "dep:ruzstd", "dep:serde"]
wrap_log = ["dep:process_path"]
