[package]
name = "example-binaural-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_binaural_filter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2 = { workspace = true, features = ["env_logger"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
hrtf = "0.8.1"
itertools = "0.14.0"
lru = "0.16.1"
num-integer = "0.1.46"
ringbuffer = "0.16.0"

[build-dependencies]
anyhow = "1.0.98"
fs-err = "3.1.3"
ureq = "3.1.2"
