[package]
name = "example-equalizer-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_equalizer_filter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2 = { workspace = true, features = ["env_logger"] }
biquad = "0.5.0"
env_logger = "0.11.8"
itertools = "0.14.0"
