[package]
name = "example-equalizer-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_equalizer_filter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2.workspace = true
biquad = "0.5.0"
dashmap = "6.1.0"
itertools = "0.14.0"
