[package]
name = "example-equalizer-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_equalizer_filter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.103"
aviutl2.workspace = true
biquad = "0.6.0"
dashmap = "6.2.1"
itertools = "0.15.0"
