[package]
name = "example-ffmpeg-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_ffmpeg_output"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
aviutl2.workspace = true
chrono = "0.4.43"
dedent = "0.1.1"
eframe = { version = "0.33.3", default-features = false, features = ["glow"] }
egui_commonmark = { version = "0.22.0", features = ["macros"] }
mplus.workspace = true
process_path = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.2.0"
uuid = { version = "1.20.0", features = ["v4"] }
windows = { version = "0.62.2", features = ["Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }
zerocopy = "0.8.39"
zip = "7.4.0"
