[package]
name = "example-image-rs-input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_image_rs_input"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2 = { workspace = true, features = ["input", "image"] }
image = "0.25.6"
ordered-float = "5.0.0"
ouroboros = "0.18.5"
