[package]
name = "example-image-rs-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_image_rs_output"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
aviutl2.workspace = true
image = "0.25.9"
lazy-regex = "3.5.1"
regex = "1.12.3"
