[package]
name = "example-local-alias-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_local_alias_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2 = { workspace = true, features = ["serde"] }
eframe = "0.32.0"
mplus.workspace = true
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
] }
winit = "0.30.12"
