[package]
name = "example-local-alias-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_local_alias_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2 = { workspace = true, features = ["serde"] }
avuitl2-eframe.workspace = true
eframe = "0.32.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
mplus.workspace = true

