[package]
name = "example-local-alias-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_local_alias_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
aviutl2 = { workspace = true, features = ["serde"] }
aviutl2-eframe.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
mplus.workspace = true

