[package]
name = "example-metronome-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_metronome_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
aviutl2 = { workspace = true, features = ["serde"] }
aviutl2-eframe.workspace = true
dashmap = "6.1.0"
hound = "3.5.1"
tracing = "0.1.44"
mplus.workspace = true
