[package]
name = "example-random-color-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "rusty_random_color_filter"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.103"
aviutl2.workspace = true
tracing = "0.1.44"
rand = "0.10.2"
windows = { version = "0.62.2", features = ["Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11"] }
