[package]
name = "example-srt-file-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_srt_file_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
aviutl2.workspace = true
easy-ext = "1.0.3"
native-dialog = "0.9.6"
srtlib = "0.2.0"
