[package]
name = "example-statistics-output"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rusty_statistics_output"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
aviutl2.workspace = true
base64 = "0.22.1"
chrono = "0.4.41"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
