[package]
name = "example-statistics-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_statistics_output"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
aviutl2.workspace = true
base64 = "0.22.1"
chrono = "0.4.43"
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
