[package]
name = "example-statistics-output"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_statistics_output"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.103"
aviutl2.workspace = true
base64 = "0.22.1"
chrono = "0.4.45"
open = "5.3.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
