[package]
name = "example-username-module"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rusty_username_module"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
aviutl2.workspace = true
whoami = "1.6.1"
